# timedate-mcp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  package.json
.claude/: settings.local.json
.github/workflows/: release-npm.yml
timedate-mcp-server/: Cargo.toml
timedate-mcp-server/npm/: .npmignore  README.md  index.js  install.js  package.json  run.js  uninstall.js
timedate-mcp-server/platform-packages/darwin-arm64/: package.json
timedate-mcp-server/platform-packages/darwin-x64/: package.json
timedate-mcp-server/platform-packages/linux-x64/: package.json
timedate-mcp-server/platform-packages/win32-x64/: package.json
timedate-mcp-server/src/: lib.rs  main.rs
