[workspace]
members = [
    "timedate-mcp-server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
schemars = { version = "1.0", features = ["chrono04"] }
# Use published framework version 0.11.0
pulseengine-mcp-server = { version = "0.11.0", features = ["stdio-logging"] }
pulseengine-mcp-macros = "0.11.0"
pulseengine-mcp-protocol = "0.11.0"
pulseengine-mcp-transport = "0.11.0"
