[workspace]
members = [
  "timedate-mcp-server"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.10"
clap = {version = "4.0", features = ["derive"]}
pulseengine-mcp-macros = "0.11.0"
pulseengine-mcp-protocol = "0.11.0"
# Use published framework version 0.11.0
pulseengine-mcp-server = {version = "0.11.0", features = ["stdio-logging"]}
pulseengine-mcp-transport = "0.11.0"
schemars = {version = "1.0", features = ["chrono04"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
